<?xml version="1.0"?>
<package format="3">
  <name>tts_msgs</name>
  <version>1.1.0</version>
  <description>PAL text-to-speech message definition</description>
  <maintainer email="david.fernandez@pal-robotics.com">user</maintainer>
  <license> PAL Robotics S.L. </license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>action_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
